tests/baselines/reference/constructSignaturesWithIdenticalOverloads.errors.txt
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(4,5): error TS2463: Duplicate overload signature for constructor.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(5,5): error TS2463: Duplicate overload signature for constructor.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(12,5): error TS2463: Duplicate overload signature for constructor.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(13,5): error TS2463: Duplicate overload signature for constructor.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(20,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(21,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(28,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(29,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(30,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(31,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(38,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(39,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(45,5): error TS2463: Duplicate overload signature for construct signature.
tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts(46,5): error TS2463: Duplicate overload signature for construct signature.


==== tests/cases/conformance/types/objectTypeLiteral/constructSignatures/constructSignaturesWithIdenticalOverloads.ts (14 errors) ====
    // Duplicate overloads of construct signatures should generate errors
    
    class C {
        constructor(x: number, y: string);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for constructor.
        constructor(x: number, y: string); // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for constructor.
        constructor(x: number) { }
    }
    
    var r1 = new C(1, '');
    
    class C2<T> {
        constructor(x: T, y: string);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for constructor.
        constructor(x: T, y: string); // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for constructor.
        constructor(x: T) { }
    }
    
    var r2 = new C2(1, '');
    
    interface I {
        new (x: number, y: string): C;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
        new (x: number, y: string): C; // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
    }
    
    var i: I;
    var r3 = new i(1, '');
    
    interface I2<T> {
        new (x: T, y: string): C2<T>;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
        new (x: T, y: string): C2<T>; // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
        new <T>(x: T, y: string): C2<T>;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
        new <T>(x: T, y: string): C2<T>; // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
    }
    
    var i2: I2<number>;
    var r4 = new i2(1, '');
    
    var a: {
        new (x: number, y: string): C;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
        new (x: number, y: string): C; // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
    }
    
    var r5 = new a(1, '');
    
    var b: {
        new <T>(x: T, y: string): C2<T>;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
        new <T>(x: T, y: string): C2<T>; // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for construct signature.
    }
    
    var r6 = new b(1, '');